# life

./: .dockerignore  .gitignore  AGENTS.md  Cargo.toml  IMPLEMENTATION_STATUS.md  MASTER_PLAN.md  README.md
apps/api/: .env.example  Dockerfile  README.md  go.mod  go.sum
apps/api/cmd/daylink-api/: main.go
apps/api/internal/config/: config.go  config_test.go
apps/api/internal/database/: database.go  database_test.go
apps/api/internal/httpapi/: admin.go  admin_auth.go  ai.go  ai_file_input_test.go  ai_gateway.go  ai_models.go  ai_settings.go  ai_settings_test.go  ai_sse_test.go  ai_usage.go  ai_usage_test.go  app_auth.go  artifacts.go  artifacts_test.go  device_approval.go  device_approval_test.go  invitations.go  invitations_test.go  metrics.go  poll_invites.go  poll_invites_test.go  polls.go  (+12 more)
apps/api/migrations/: 002_app_account_invitations.sql  003_ai_subscriptions.sql  004_ai_models_and_token_usage.sql  005_monthly_ai_quotas.sql  006_content_key_envelopes.sql  007_content_key_device_approvals.sql  010_poll_friend_invites.sql  011_poster_templates.sql
apps/api/tests/: blackbox.mjs
apps/mobile/: README.md  analysis_options.yaml  flutter_rust_bridge.yaml  pubspec.yaml
apps/mobile/lib/: main.dart
apps/mobile/rust_builder/: pubspec.yaml
apps/mobile/test/: account_isolation_test.dart  account_security_page_test.dart  agent_codex_transport_test.dart  ai_gateway_client_test.dart  app_authentication_test.dart  app_session_monitor_test.dart  artifact_client_test.dart  artifact_repository_test.dart  artifact_tools_test.dart  assistant_artifact_preview_page_test.dart  assistant_artifact_preview_sheet_test.dart  assistant_conversation_export_test.dart  assistant_conversation_repository_test.dart  assistant_page_test.dart  assistant_speech_input_test.dart  codex_app_server_client_test.dart  content_encryption_coordinator_test.dart  content_master_key_page_test.dart  data_sync_client_test.dart  data_sync_coordinator_test.dart  data_sync_page_test.dart  data_sync_repository_test.dart  device_approval_client_test.dart  device_approval_success_page_test.dart  device_approval_waiting_page_test.dart  end_to_end_encryption_page_test.dart  friend_schedule_detail_page_test.dart  friend_schedule_editor_page_test.dart  friend_schedule_list_page_test.dart  hosts_page_test.dart  key_envelope_client_test.dart  my_page_test.dart  notification_preferences_repository_test.dart  notification_settings_page_test.dart  office_artifact_preview_parser_test.dart  openai_responses_file_input_test.dart  operations_repository_test.dart  password_change_page_test.dart  poster_template_renderer_test.dart  recovery_key_management_page_test.dart  (+16 more)
apps/web/: .env.example  .gitignore  Dockerfile  README.md  cloudflare-env.d.ts  eslint.config.mjs  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
apps/web/.openai/: hosting.json
apps/web/app/: globals.css  layout.tsx  page.tsx
apps/web/components/: AdminAccounts.tsx  AdminAiSettings.tsx  AdminAudit.tsx  AdminConsole.tsx  AdminOverview.tsx  AdminSettings.tsx  AdminSetupForm.tsx  AdminShell.tsx  AdminTotpSetup.tsx  PollClient.tsx
apps/web/db/: index.ts  schema.ts
apps/web/drizzle/: 0000_premium_shen.sql  0001_conscious_rocket_raccoon.sql  0002_wise_namorita.sql  0003_unique_power_pack.sql  0004_sharp_giant_man.sql  0005_sleepy_ben_urich.sql
apps/web/lib/: admin-auth.ts  admin-security.ts  api-auth.ts  app-auth.ts  audit.ts  bootstrap-auth.ts
apps/web/src/: App.tsx  Auth.tsx  Dashboard.tsx  FriendSelectionPage.tsx  InvitePage.tsx  PollPage.tsx  api.ts  styles.css
apps/web/tests/: build.test.mjs  rendered-html.test.mjs  security.test.mjs
apps/web/worker/: index.ts
crates/agent/: Cargo.toml
crates/agent/src/: main.rs
crates/mobile-core/: Cargo.toml  build.rs  cargokit.yaml
crates/mobile-core/src/: frb_generated.rs  lib.rs  vault.rs
crates/mobile-core/src/api/: mobile.rs
crates/protocol/: Cargo.toml
crates/protocol/src/: codex.rs  envelope.rs  frame.rs  lib.rs  tool.rs
deploy/: .env.example  Caddyfile  Caddyfile.lan  README.md  docker-compose.lan.yml  docker-compose.yml
docs/adr/: 0001-product-and-ai-architecture.md  0002-identity-e2ee-and-sync.md
(+174 files in other folders)
