[package]
name = "daylink-mobile-core"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "rlib"]

[dependencies]
bytes.workspace = true
daylink-protocol = { path = "../protocol" }
flutter_rust_bridge = "=2.12.0"
russh.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
uuid.workspace = true

[lints.rust]
# The generated Dart FFI shim necessarily contains audited unsafe blocks.
# Hand-written modules keep their own `#![forbid(unsafe_code)]` boundary.
unsafe_code = "deny"

[lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
missing_errors_doc = "allow"
missing_panics_doc = "allow"
